<resources>
    <string name="app_name">Stranzee</string>
    <string name="name_of_app">STRANZEE</string>
    <string name="agree_terms_and_policy">By continuing you agree to the Terms of Service and Privacy Policy</string>
    <string name="create_an_account">Create an Account</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="decoration_for_logo">decoration for logo</string>
    <string name="terms_of_service_link">terms_of_service</string>
    <string name="privacy_policy_link">privacy_policy</string>
    <string name="sign_up_action_bar_text">Join Stranzee</string>
    <string name="go_back">Go back</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="about_me">About me</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="email">Email</string>
    <string name="select_birthday">Select birthday</string>
    <string name="birthday">Birthday</string>
    <string name="interested_in">Interested in</string>
    <string name="create_new_account">Create new account</string>
    <string name="change_birthday">Change birthday</string>
    <string-array name="all_genders">
        <item>Select your gender</item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string-array name="all_countries">
        <item>Select your country</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Congo, the Democratic Republic of the</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote D\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands (Malvinas)</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and Mcdonald Islands</item>
        <item>Holy See (Vatican City State)</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran, Islamic Republic of</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea, Democratic People\'s Republic of</item>
        <item>Korea, Republic of</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Lao People\'s Democratic Republic</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libyan Arab Jamahiriya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao</item>
        <item>Macedonia, the Former Yugoslav Republic of</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia, Federated States of</item>
        <item>Moldova, Republic of</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestinian Territory, Occupied</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia and Montenegro</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syrian Arab Republic</item>
        <item>Taiwan, Province of China</item>
        <item>Tajikistan</item>
        <item>Tanzania, United Republic of</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>United States Minor Outlying Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Viet Nam</item>
        <item>Virgin Islands, British</item>
        <item>Virgin Islands, US</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find">Find</string>
    <string name="chat">Chat</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="who_checked_me">Who checked me?</string>
    <string name="log_out">Log out</string>
    <string name="contact_us">Contact us</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="slider_menu">slider menu</string>
    <string name="strangee">STRANZEE</string>
    <string name="chat_capital">CHAT</string>
    <string name="saved_capital">SAVED</string>
    <string name="profile_capital">PROFILE</string>
    <string name="stranger">stranger</string>
    <string name="remove_saved_profile">Remove saved profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="edit_details">Edit details</string>
    <string name="edit_profile_details">Edit profile details</string>
    <string name="name">Name</string>
    <string name="remove_interest">Remove interest</string>
    <string name="plus_add">+ Add</string>
    <string name="filter_results">Filter Results</string>
    <string name="interested_in_optional">Interested in (optional)</string>
    <string name="apply">Apply</string>
    <string name="save_details">Save Details</string>
    <string name="send_image">Send image</string>
    <string name="send_emoji">Send emoji</string>
    <string name="send_message">Send message</string>
    <string name="message">Message...</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="full_screen_image">Full screen image</string>
    <string name="back_button">back button</string>
    <string name="rate_us_title">Rate us</string>
    <string name="rate_us_dialog_text">Stranzee app currently does not have any ads or in-app purchases and is solely focused on providing best user experience.\nHelp us grow by rating us and providing your feedback.</string>
    <string name="don_t_show_again">Don\'t ask again</string>
</resources>