<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/filter_dialog_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/filter_results"
            android:textSize="19sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#111111" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="20dp"
            android:background="#707070" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/country"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sign_up_page_black_text"
            android:layout_marginTop="7dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/poppins"
            android:text="@string/gender"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sign_up_page_black_text"
            android:layout_marginTop="7dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_interest"
            style="@style/Widget.App.SignUpTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/interested_in_optional"
                android:inputType="textEmailAddress"
                android:textColor="@color/sign_up_page_black_text"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/apply_button"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/round_blue_button_background"
            android:text="@string/apply"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

        </LinearLayout>
    </LinearLayout>
</layout>