<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/rate_us_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/sign_up_page_black_text"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="22dp"
            android:background="#DDDDDD" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/rate_us_dialog_text"
            android:textColor="@color/sign_up_page_black_text"
            android:textSize="16sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:numStars="5"
            android:stepSize="1" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="13sp"
            android:fontFamily="@font/poppins"
            android:text="@string/don_t_show_again" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/rateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/rate_us"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</layout>