<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/page_background"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".view.EditDetailsActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_first_name"
                    style="@style/Widget.App.SignUpTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/sign_up_page_black_text"
                        android:textSize="17sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_last_name"
                    style="@style/Widget.App.SignUpTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/sign_up_page_black_text"
                        android:textSize="17sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/poppins"
                android:text="@string/country"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/poppins"
                android:text="@string/gender"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/poppins"
                android:text="@string/interested_in"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/interests_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/poppins"
                android:text="@string/birthday"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/birthday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/sign_up_page_black_text"
                android:textSize="17sp"
                tools:text="Jan 1, 2001" />

            <TextView
                android:id="@+id/select_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/round_blue_button_background"
                android:fontFamily="@font/poppins"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text="@string/change_birthday"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_about_me"
                style="@style/Widget.App.SignUpTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:counterEnabled="true"
                app:counterMaxLength="150"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/about_me"
                    android:maxLength="150"
                    android:inputType="textMultiLine"
                    android:textColor="@color/sign_up_page_black_text"
                    android:textSize="17sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_details_button"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/round_blue_button_background"
                android:text="@string/save_details"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

        </LinearLayout>
    </ScrollView>

</layout>