<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/single_chat_background"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".view.SingleChatActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_message_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/chat_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/chat_input_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/send_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/send_image"
            android:padding="6dp"
            android:src="@drawable/ic_send_image" />

        <ImageView
            android:id="@+id/send_emoji_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/send_emoji"
            android:paddingStart="2dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"
            android:src="@drawable/ic_send_emoji" />

        <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/poppins"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:lineSpacingMultiplier="0.88"
            android:maxLines="4"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:textColor="#242134"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/send_message"
            android:padding="6dp"
            android:src="@drawable/ic_send_message" />

    </LinearLayout>

</LinearLayout>